--- a/index.html
+++ b/index.html
@@ -1,18 +1,125 @@
 <!DOCTYPE html>
 <html lang="sw">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>UWAKAMA | Ingia</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Login | UWAKAMA</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f4f6f8;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    .login-container {
+      background-color: #ffffff;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+      width: 100%;
+      max-width: 400px;
+      text-align: center;
+      position: relative;
+    }
+    .login-container img {
+      width: 100px;
+      margin-bottom: 15px;
+    }
+    h2 {
+      margin-bottom: 20px;
+      color: #007bff;
+    }
+    input[type="email"],
+    input[type="password"] {
+      width: 100%;
+      padding: 12px;
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      font-size: 1em;
+    }
+    button {
+      width: 100%;
+      padding: 12px;
+      margin: 10px 0;
+      border: none;
+      border-radius: 5px;
+      background-color: #007bff;
+      color: white;
+      font-size: 1em;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #0056b3;
+    }
+    .links {
+      margin-top: 15px;
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
+    }
+    .links a {
+      color: #007bff;
+      text-decoration: none;
+      font-size: 0.9em;
+    }
+    .links a:hover {
+      text-decoration: underline;
+    }
+    .help-desk {
+      margin-top: 25px;
+      font-size: 0.85em;
+      color: #666;
+    }
+    #error-message {
+      color: red;
+      font-size: 0.9em;
+      margin-top: 10px;
+    }
+
+    /* Loading spinner */
+    .loading-spinner {
+      display: none;
+      border: 4px solid #f3f3f3;
+      border-top: 4px solid #007bff;
+      border-radius: 50%;
+      width: 30px;
+      height: 30px;
+      animation: spin 1s linear infinite;
+      margin: 10px auto;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+  </style>
 </head>
 <body>
   <div class="login-container">
+    <img src="logo.png" alt="UWAKAMA Logo" />
     <h2>Karibu UWAKAMA</h2>
-    <input type="email" id="email" placeholder="Barua Pepe">
-    <input type="password" id="password" placeholder="Nenosiri">
-    <button onclick="login()">Ingia</button>
-    <p id="login-error"></p>
+    <form id="loginForm">
+      <input type="email" id="email" placeholder="Barua pepe" required 
+        onkeydown="if(event.key==='Enter'){event.preventDefault(); document.getElementById('password').focus();}" />
+      <input type="password" id="password" placeholder="Nenosiri" required />
+      <button type="submit">Ingia</button>
+    </form>
+
+    <div class="loading-spinner" id="spinner"></div>
+
+    <div id="error-message"></div>
+    <div class="links">
+      <a href="register.html">Jisajili</a>
+      <a href="reset-password.html">Umesahau Nenosiri?</a>
+    </div>
+    <div class="help-desk">
+      <p>Help Desk:<br>Email: imariki035@gmail.com<br>Simu: 0717173853</p>
+    </div>
   </div>
 
   <script type="module">
@@ -23,7 +130,7 @@
       apiKey: "AIzaSyAdCrGuPYfku4swj8URW0SXvJ8CVlUZ0Bc",
       authDomain: "uwakama-66696.firebaseapp.com",
       projectId: "uwakama-66696",
-      storageBucket: "uwakama-66696.firebasestorage.app",
+      storageBucket: "uwakama-66696.appspot.com",
       messagingSenderId: "94913825341",
       appId: "1:94913825341:web:4da7752f80b1a3a5783854",
       measurementId: "G-S3PWMTYVB4"
@@ -32,18 +139,26 @@
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
 
-    window.login = function () {
+    const loginForm = document.getElementById("loginForm");
+    const errorMsg = document.getElementById("error-message");
+    const spinner = document.getElementById("spinner");
+
+    loginForm.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      errorMsg.textContent = "";
+      spinner.style.display = "block";
+
       const email = document.getElementById("email").value;
       const password = document.getElementById("password").value;
 
-      signInWithEmailAndPassword(auth, email, password)
-        .then(() => {
-          window.location.href = "dashboard.html";
-        })
-        .catch((error) => {
-          document.getElementById("login-error").innerText = "Taarifa si sahihi au akaunti haipo!";
-        });
-    }
+      try {
+        await signInWithEmailAndPassword(auth, email, password);
+        window.location.href = "dashboard.html";
+      } catch (error) {
+        errorMsg.textContent = "Email au nenosiri si sahihi.";
+        spinner.style.display = "none";
+      }
+    });
   </script>
 </body>
 </html>
