--- a/dashboard.html
+++ b/dashboard.html
@@ -16,12 +16,14 @@
       padding: 20px;
       color: white;
       text-align: center;
+      position: relative;
     }
     nav {
       display: flex;
       justify-content: center;
       gap: 20px;
       margin-top: 15px;
+      flex-wrap: wrap;
     }
     nav a {
       color: white;
@@ -33,6 +35,47 @@
     }
     nav a.active, nav a:hover {
       background-color: rgba(255, 255, 255, 0.2);
+    }
+    .profile {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+    }
+    .profile .icon {
+      font-size: 1.6em;
+      background: white;
+      color: #007bff;
+      border-radius: 50%;
+      padding: 8px;
+      cursor: pointer;
+      box-shadow: 0 0 5px rgba(0,0,0,0.2);
+      transition: transform 0.2s;
+    }
+    .profile .icon.active {
+      transform: scale(1.1);
+      background-color: #e1ecff;
+    }
+    .dropdown {
+      display: none;
+      position: absolute;
+      right: 0;
+      top: 45px;
+      background: white;
+      color: black;
+      border-radius: 5px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.15);
+      padding: 10px;
+      z-index: 1000;
+      min-width: 150px;
+    }
+    .dropdown a {
+      display: block;
+      padding: 8px;
+      text-decoration: none;
+      color: #333;
+    }
+    .dropdown a:hover {
+      background: #f4f4f4;
     }
     main {
       max-width: 1000px;
@@ -67,11 +110,58 @@
       background: #e9ecef;
       margin-top: 40px;
     }
+    .modal {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: rgba(0, 0, 0, 0.5);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+    }
+    .modal-content {
+      background: white;
+      padding: 30px;
+      border-radius: 10px;
+      text-align: center;
+      max-width: 90%;
+      box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+      animation: fadeIn 0.3s ease;
+    }
+    .modal-content h3 {
+      margin-bottom: 10px;
+      color: #dc3545;
+    }
+    .modal-content p {
+      margin-bottom: 20px;
+    }
+    .modal-content button {
+      padding: 10px 20px;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: scale(0.9); }
+      to { opacity: 1; transform: scale(1); }
+    }
   </style>
 </head>
 <body>
   <header>
     <h2>Dashboard | UWAKAMA</h2>
+    <div class="profile">
+      <span class="icon" onclick="toggleDropdown(this)">👤</span>
+      <div class="dropdown" id="dropdownMenu">
+        <a href="reset-password.html">Badilisha Nenosiri</a>
+        <a href="#" onclick="logout()">Toka</a>
+      </div>
+    </div>
     <nav>
       <a href="dashboard.html" class="active">Dashboard</a>
       <a href="members.html">Wanachama</a>
@@ -86,17 +176,14 @@
       <h3>Wanachama Wote</h3>
       <p id="totalMembers">Inapakia...</p>
     </div>
-
     <div class="card">
       <h3>Jumla ya Michango (TZS)</h3>
       <p id="totalContributions">Inapakia...</p>
     </div>
-
     <div class="card">
       <h3>Jumla ya Matumizi (TZS)</h3>
       <p id="totalExpenses">Inapakia...</p>
     </div>
-
     <div class="card">
       <h3>Salio (Michango - Matumizi)</h3>
       <p id="balance">Inapakia...</p>
@@ -107,6 +194,14 @@
     &copy; 2025 UWAKAMA - Umoja wa Walimu Kata ya Kahe Mashariki
   </footer>
 
+  <div id="logoutModal" class="modal" style="display:none">
+    <div class="modal-content">
+      <h3>Muda umeisha</h3>
+      <p>Umetoka kwenye mfumo kwa sababu ya kutotumika kwa zaidi ya dakika 5.</p>
+      <button onclick="window.location.href='index.html'">Rudi Kuingia</button>
+    </div>
+  </div>
+
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-app.js";
     import {
@@ -114,7 +209,7 @@
       collection,
       getDocs
     } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-firestore.js";
-    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-auth.js";
+    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/11.9.1/firebase-auth.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyAdCrGuPYfku4swj8URW0SXvJ8CVlUZ0Bc",
@@ -178,6 +273,53 @@
     }
 
     loadDashboard();
+
+    // Auto logout after 5 minutes of inactivity
+    let timeoutHandle;
+    const timeoutDuration = 5 * 60 * 1000;
+
+    function showLogoutModal() {
+      document.getElementById("logoutModal").style.display = "flex";
+    }
+
+    function resetTimer() {
+      clearTimeout(timeoutHandle);
+      timeoutHandle = setTimeout(() => {
+        auth.signOut().then(() => {
+          showLogoutModal();
+        });
+      }, timeoutDuration);
+    }
+
+    window.addEventListener("mousemove", resetTimer);
+    window.addEventListener("keydown", resetTimer);
+    window.addEventListener("click", resetTimer);
+    resetTimer();
+
+    // Profile Dropdown Toggle with outside click
+    window.toggleDropdown = function (icon) {
+      const dropdown = document.getElementById("dropdownMenu");
+      const isOpen = dropdown.style.display === "block";
+      dropdown.style.display = isOpen ? "none" : "block";
+      icon.classList.toggle("active", !isOpen);
+    };
+
+    document.addEventListener("click", function(event) {
+      const profile = document.querySelector(".profile");
+      const dropdown = document.getElementById("dropdownMenu");
+      const icon = document.querySelector(".profile .icon");
+      if (!profile.contains(event.target)) {
+        dropdown.style.display = "none";
+        icon.classList.remove("active");
+      }
+    });
+
+    // Logout Function
+    window.logout = function () {
+      signOut(auth).then(() => {
+        window.location.href = "index.html";
+      });
+    };
   </script>
 </body>
 </html>
