--- a/dashboard.html
+++ b/dashboard.html
@@ -8,75 +8,96 @@
     body {
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
-      background-color: #f4f6f8;
+      background-color: #fff8f0;
       color: #333;
     }
+
     header {
-      background-color: #007bff;
-      padding: 20px;
+      background-color: #fb8c00;
+      padding: 20px 50px 20px 60px;
       color: white;
       text-align: center;
       position: relative;
     }
-    nav {
+
+    .hamburger {
+      display: none;
+      font-size: 1.8em;
+      position: absolute;
+      left: 20px;
+      top: 18px;
+      color: white;
+      cursor: pointer;
+      z-index: 2000;
+    }
+
+    nav.main-nav {
       display: flex;
       justify-content: center;
-      gap: 20px;
-      margin-top: 15px;
+      gap: 15px;
       flex-wrap: wrap;
+      margin-top: 10px;
     }
-    nav a {
+
+    nav.main-nav a {
       color: white;
       text-decoration: none;
       font-weight: bold;
-      padding: 8px 15px;
-      border-radius: 5px;
-      transition: background 0.3s ease;
+      padding: 8px 14px;
+      border-radius: 6px;
+      transition: background 0.3s;
     }
-    nav a.active, nav a:hover {
-      background-color: rgba(255, 255, 255, 0.2);
+
+    nav.main-nav a.active, nav.main-nav a:hover {
+      background-color: rgba(255, 255, 255, 0.25);
     }
+
     .profile {
       position: absolute;
       top: 20px;
       right: 20px;
     }
+
     .profile .icon {
-      font-size: 1.6em;
+      font-size: 1.5em;
       background: white;
-      color: #007bff;
+      color: #fb8c00;
       border-radius: 50%;
       padding: 8px;
       cursor: pointer;
-      box-shadow: 0 0 5px rgba(0,0,0,0.2);
-      transition: transform 0.2s;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+      transition: transform 0.2s ease;
     }
+
     .profile .icon.active {
       transform: scale(1.1);
-      background-color: #e1ecff;
+      background-color: #ffe0b2;
     }
+
     .dropdown {
       display: none;
       position: absolute;
       right: 0;
-      top: 45px;
+      top: 48px;
       background: white;
-      color: black;
-      border-radius: 5px;
+      border-radius: 6px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.15);
-      padding: 10px;
-      z-index: 1000;
-      min-width: 150px;
+      z-index: 999;
+      min-width: 160px;
     }
+
     .dropdown a {
       display: block;
-      padding: 8px;
-      text-decoration: none;
+      padding: 10px;
       color: #333;
+      text-decoration: none;
+      font-size: 0.95em;
     }
+
     .dropdown a:hover {
-      background: #f4f4f4;
+      background-color: #fdf0e0;
     }
+
     main {
       max-width: 1000px;
       margin: 30px auto;
@@ -85,31 +106,36 @@
       grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
       gap: 20px;
     }
+
     .card {
       background: white;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.08);
       padding: 20px;
       text-align: center;
     }
+
     .card h3 {
-      color: #555;
-      font-size: 1.2rem;
-      margin-bottom: 10px;
+      color: #666;
+      font-size: 1.15rem;
+      margin-bottom: 8px;
     }
+
     .card p {
       font-size: 1.8rem;
       font-weight: bold;
-      color: #007bff;
+      color: #fb8c00;
     }
+
     footer {
       text-align: center;
       padding: 20px;
-      color: #666;
+      color: #777;
       font-size: 0.9em;
-      background: #e9ecef;
+      background: #fff3e0;
       margin-top: 40px;
     }
+
     .modal {
       position: fixed;
       top: 0;
@@ -122,6 +148,7 @@
       align-items: center;
       z-index: 9999;
     }
+
     .modal-content {
       background: white;
       padding: 30px;
@@ -131,30 +158,79 @@
       box-shadow: 0 10px 20px rgba(0,0,0,0.2);
       animation: fadeIn 0.3s ease;
     }
+
     .modal-content h3 {
       margin-bottom: 10px;
-      color: #dc3545;
+      color: #d84315;
     }
+
     .modal-content p {
       margin-bottom: 20px;
     }
+
     .modal-content button {
       padding: 10px 20px;
-      background-color: #007bff;
+      background-color: #fb8c00;
       color: white;
       border: none;
-      border-radius: 5px;
+      border-radius: 6px;
       cursor: pointer;
+      font-weight: bold;
     }
+
+    /* Sidebar for mobile */
+    .sidebar {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: -100%;
+      height: 100%;
+      width: 250px;
+      background-color: #fb8c00;
+      padding-top: 60px;
+      transition: left 0.3s ease;
+      z-index: 9999;
+      flex-direction: column;
+    }
+
+    .sidebar a {
+      color: white;
+      padding: 15px 20px;
+      text-decoration: none;
+      display: block;
+      font-weight: bold;
+    }
+
+    .sidebar a:hover {
+      background-color: rgba(255,255,255,0.2);
+    }
+
+    .sidebar.show {
+      left: 0;
+    }
+
     @keyframes fadeIn {
       from { opacity: 0; transform: scale(0.9); }
       to { opacity: 1; transform: scale(1); }
+    }
+
+    @media (max-width: 768px) {
+      nav.main-nav {
+        display: none;
+      }
+
+      .hamburger {
+        display: block;
+      }
     }
   </style>
 </head>
 <body>
   <header>
     <h2>Dashboard | UWAKAMA</h2>
+
+    <div class="hamburger" onclick="toggleSidebar()">☰</div>
+
     <div class="profile">
       <span class="icon" onclick="toggleDropdown(this)">👤</span>
       <div class="dropdown" id="dropdownMenu">
@@ -162,7 +238,8 @@
         <a href="#" onclick="logout()">Toka</a>
       </div>
     </div>
-    <nav>
+
+    <nav class="main-nav">
       <a href="dashboard.html" class="active">Dashboard</a>
       <a href="members.html">Wanachama</a>
       <a href="contributions.html">Michango</a>
@@ -171,9 +248,19 @@
     </nav>
   </header>
 
+  <!-- Sidebar kwa simu -->
+  <div class="sidebar" id="sidebarMenu">
+    <a href="dashboard.html">Dashboard</a>
+    <a href="members.html">Wanachama</a>
+    <a href="contributions.html">Michango</a>
+    <a href="expenses.html">Matumizi</a>
+    <a href="reports.html">Ripoti</a>
+    <a href="#" onclick="logout()">Toka</a>
+  </div>
+
   <main>
     <div class="card">
-      <h3>Wanachama Wote</h3>
+      <h3>Idadi ya Wanachama</h3>
       <p id="totalMembers">Inapakia...</p>
     </div>
     <div class="card">
@@ -185,7 +272,7 @@
       <p id="totalExpenses">Inapakia...</p>
     </div>
     <div class="card">
-      <h3>Salio (Michango - Matumizi)</h3>
+      <h3>Baki ya Akaunti</h3>
       <p id="balance">Inapakia...</p>
     </div>
   </main>
@@ -215,7 +302,7 @@
       apiKey: "AIzaSyAdCrGuPYfku4swj8URW0SXvJ8CVlUZ0Bc",
       authDomain: "uwakama-66696.firebaseapp.com",
       projectId: "uwakama-66696",
-      storageBucket: "uwakama-66696.firebasestorage.app",
+      storageBucket: "uwakama-66696.appspot.com",
       messagingSenderId: "94913825341",
       appId: "1:94913825341:web:4da7752f80b1a3a5783854",
       measurementId: "G-S3PWMTYVB4"
@@ -274,7 +361,6 @@
 
     loadDashboard();
 
-    // Auto logout after 5 minutes of inactivity
     let timeoutHandle;
     const timeoutDuration = 5 * 60 * 1000;
 
@@ -296,7 +382,6 @@
     window.addEventListener("click", resetTimer);
     resetTimer();
 
-    // Profile Dropdown Toggle with outside click
     window.toggleDropdown = function (icon) {
       const dropdown = document.getElementById("dropdownMenu");
       const isOpen = dropdown.style.display === "block";
@@ -314,11 +399,15 @@
       }
     });
 
-    // Logout Function
     window.logout = function () {
       signOut(auth).then(() => {
         window.location.href = "index.html";
       });
+    };
+
+    window.toggleSidebar = function () {
+      const sidebar = document.getElementById("sidebarMenu");
+      sidebar.classList.toggle("show");
     };
   </script>
 </body>
